# CodexProject

./: .gitignore  append_manifest.py  cleanup_empty_skills.py  clone_skills.sh  fix_skill_md.py  register_skills.py
codex-skills/06_商业与专业领域/OPCUA-MCP/tests/: README.md  pyproject.toml
codex-skills/06_商业与专业领域/arduino-cli-mcp/: README.md  SKILL.md  pyproject.toml
codex-skills/06_商业与专业领域/arduino-cli-mcp/arduino_cli_mcp/: __init__.py
codex-skills/06_商业与专业领域/arduino-cli-mcp/tests/: test_cli_exec.py
codex-skills/06_商业与专业领域/pcbparts-mcp/: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml
codex-skills/06_商业与专业领域/pcbparts-mcp/data/: manifest.json
codex-skills/06_商业与专业领域/pcbparts-mcp/data/boards/: 0104-usb-hub.yaml  6-ghz-fmcw-radar.yaml  BOARDS.md  adafruit-ads1115-adc.yaml  adafruit-as7341-spectral.yaml  adafruit-bno055-9-dof-imu.yaml  adafruit-drv2605l-haptic.yaml  adafruit-esp32-c6-feather.yaml  adafruit-esp32-s3-feather.yaml  adafruit-feather-m0-wifi.yaml  adafruit-max31856-thermocouple.yaml  adafruit-sparkle-motion.yaml  adafruit-st25dv16-nfc-eeprom.yaml  adafruit-tps61169-cc-boost-led-driver.yaml  adsbee-rf-board.yaml  adumx165-usb-isolator.yaml  anavi-fixed-power-delivery.yaml  anavi-macro-pad-8.yaml  anavi-miracle-controller.yaml  anavi-thermometer.yaml  antmicro-usb-c-pd-adapter.yaml  artemis-global-tracker.yaml  asac-fc-rev-b.yaml  atmosfc.yaml  axiom-motor-controller.yaml  axxsolder-stusb4500.yaml  beehive-monitor.yaml  bgeigiescint.yaml  bioamp-exg-pill.yaml  bitaxe-ultra.yaml  blues-notecarrier-b.yaml  blues-notecarrier-f.yaml  blues-notecarrier-pi.yaml  candlelight-usb-can.yaml  card-io-ecg-frontend.yaml  catsniffer.yaml  chameleonmini-revg.yaml  corne-v4.yaml  crazyflie.yaml  cubesat-ov5640-camera-board.yaml  (+89 more)
codex-skills/06_商业与专业领域/pcbparts-mcp/data/design-rules/rules/: DESIGN-STYLE-GUIDE.md  verified-sources.md
codex-skills/06_商业与专业领域/pcbparts-mcp/data/design-rules/rules/guides/: connectors.md  emc.md  pcb-layout.md  power-architecture.md  schematic-practices.md  signal-integrity.md
codex-skills/06_商业与专业领域/pcbparts-mcp/data/design-rules/rules/interfaces/: can.md  i2c.md  uart.md
codex-skills/06_商业与专业领域/pcbparts-mcp/data/design-rules/rules/mcus/: stm32.md
codex-skills/06_商业与专业领域/pcbparts-mcp/data/design-rules/rules/misc/: adc-dac.md  audio.md  crystal.md  gnss-integration.md  rf-antenna.md
codex-skills/06_商业与专业领域/pcbparts-mcp/data/design-rules/rules/power/: battery.md  ldo.md
codex-skills/06_商业与专业领域/pcbparts-mcp/data/design-rules/rules/protection/: reverse-polarity.md
codex-skills/06_商业与专业领域/pcbparts-mcp/data/design-rules/rules_sources/guides/checklist/: altium-schematic-design-review-checklist.md  azonenberg-pcb-checklist-schematic-checklist.md  espressif-esp32-s3-hw-design-guidelines-schematic-checklist.md  grosdode-pcb-design-prototyping-bring-up-checklist.md  sierra-circuits-dfm-rules.md
codex-skills/06_商业与专业领域/pcbparts-mcp/data/design-rules/rules_sources/guides/connectors/: eaton-how-to-select-a-terminal-block.md
codex-skills/06_商业与专业领域/pcbparts-mcp/data/sensors/: circuitpython.json  dfrobot.json  hilink.json  ic_aliases.json  maxbotix.json  winsen.json  zephyr.json
codex-skills/06_商业与专业领域/pcbparts-mcp/docs/: branding-style-guide.md
codex-skills/06_商业与专业领域/pcbparts-mcp/landing/: site.webmanifest
codex-skills/06_商业与专业领域/pcbparts-mcp/src/pcbparts_mcp/: __init__.py  alternatives.py  cache.py  client.py  config.py  digikey.py  manufacturer_aliases.py  mounting.py  mouser.py  server.py  subcategory_aliases.py
codex-skills/06_商业与专业领域/pcbparts-mcp/src/pcbparts_mcp/boards_db/: __init__.py  detail.py  search.py
codex-skills/06_商业与专业领域/pcbparts-mcp/src/pcbparts_mcp/db/: attributes.py  categories.py  connection.py  stats.py
codex-skills/06_商业与专业领域/pcbparts-mcp/src/pcbparts_mcp/search/: __init__.py  result.py  spec_filter.py
codex-skills/06_商业与专业领域/pcbparts-mcp/src/pcbparts_mcp/sensor_db/: __init__.py  connection.py
codex-skills/06_商业与专业领域/pcbparts-mcp/src/pcbparts_mcp/smart_parser/: __init__.py  semantic.py
codex-skills/06_商业与专业领域/pcbparts-mcp/tests/: test_boards_db.py  test_db.py  test_history.py  test_parse_boards.py  test_parsers.py  test_pinout.py  test_resolvers.py
codex-skills/06_商业与专业领域/pcbparts-mcp/tests/boards_eval/: golden_queries.py
codex-skills/14_学术论文与科研图表/semantic-scholar-mcp/: LICENSE  pyproject.toml
codex-skills/14_学术论文与科研图表/semantic-scholar-mcp/src/semantic_scholar_mcp/: __init__.py
codex-skills/53_电气与智能化设计/MODBUS-MCP/modbus-mock-server/: pyproject.toml
(+1724 files in other folders)
