[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-scholar-mcp"
version = "0.1.0"
description = "MCP server for searching academic papers via the Semantic Scholar API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sue Chen", email = "xiuyechen@gmail.com" },
]
keywords = ["mcp", "semantic-scholar", "academic", "research", "papers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "semanticscholar>=0.10.0",
]

[project.scripts]
semantic-scholar-mcp = "semantic_scholar_mcp.server:main"
